18n-ed strings, moving main work from Activity to Service